feat: initialize backend code for share functionality
